--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "PARKING 24",
+  "name": "파킹24 - 인천공항 주차대행",
   "icons": [
     {
       "src": "favicon.ico",
